--- a/style_blog.css
+++ b/style_blog.css
@@ -67,6 +67,9 @@ h2{
     border-width: 1px;
     border-style: solid;
     border-color: green;
+    position: relative;
+    bottom: 120px;
+    left: 820px;
 }
 
 .button a:hover, a:active{
