--- a/style_contact.css
+++ b/style_contact.css
@@ -62,6 +62,9 @@ a {
     border-width: 1px;
     border-style: solid;
     border-color: green;
+    position: relative;
+    bottom: 120px;
+    left: 820px;
 }
 
 .button a:hover, a:active{
@@ -70,7 +73,7 @@ a {
 
 .contact a{
     position: relative;
-    bottom: -80px;
+    bottom: -50px;
     display: inline-block;
     align-items: center;
     animation: transparency 1s;
@@ -89,7 +92,7 @@ a {
     width: 500px;
     position: absolute;
     right: 70px;
-    top: 290px;
+    top: 250px;
 }
 
 .contact-box>h2, .contact-box>form, label{
