--- a/style_index.css
+++ b/style_index.css
@@ -32,6 +32,7 @@ p{
     right: 30px;
     font-style: italic;
     font-size: 24px;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .profile-photo{
