--- a/style_index.css
+++ b/style_index.css
@@ -8,12 +8,14 @@ html, body{
 
 h1{
     font-family: Cambria;
+    margin-left: 20px;
 }
 
 p{
     font-family: "Times New Roman";
     font-size: 17px;
     width: 500px;
+    margin-left: 20px;
 }
 
 @keyframes slideInLeft {
